Mission responses are posted to database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="done">Ferdig</string>
     <string name="comments">Kommentarer</string>
     <string name="calculating_distance">Beregner distanse...</string>
+    <string name="your_response_here">Din tilbakemelding her</string>
 </resources>
