--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="comments">Kommentarer</string>
     <string name="calculating_distance">Beregner distanse...</string>
     <string name="your_response_here">Din tilbakemelding her</string>
+    <string name="title">Tittel</string>
+    <string name="add_picture">Legg til bilde</string>
 </resources>
