--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="add_picture">Legg til bilde</string>
     <string name="write_comment">Skriv kommentar</string>
     <string name="your_comment">Din kommentar</string>
+    <string name="username">Brukernavn</string>
+    <string name="password">Passord</string>
+    <string name="log_in">Logg inn</string>
 </resources>
