--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="register">Registrer</string>
     <string name="repeat_password">Gjenta passord</string>
     <string name="register_code">Registreringskode</string>
+    <string name="loading_mission">Henter oppdrag...</string>
 </resources>
