--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="repeat_password">Gjenta passord</string>
     <string name="register_code">Registreringskode</string>
     <string name="loading_mission">Henter oppdrag...</string>
+    <string name="your_suggestion">Ditt forslag</string>
 </resources>
