--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="register_code">Registreringskode</string>
     <string name="loading_mission">Henter oppdrag...</string>
     <string name="your_suggestion">Ditt forslag</string>
+    <string name="posting_suggestion">Poster forslag...</string>
 </resources>
